Integrate ND4J and Bullet; Update Release workflow